--- a/pages/activity/show.wxml
+++ b/pages/activity/show.wxml
@@ -1,2 +1,39 @@
-<!--pages/activity/show.wxml-->
-<text>pages/activity/show.wxml</text>
+<!--index.wxml-->
+<view class="container">
+  <view class="cell">
+    <view class="title">主题</view>
+    <view class="main">{{data.title}}</view>
+  </view>
+  <view class="cell">
+    <view class="title">类型</view>
+    <view class="main">{{kindName}}</view>
+  </view>
+  <view class="cell">
+    <view class="title">日期</view>
+    <view class="main">
+       <view class="date">{{date}}</view>
+       <view class="date">{{time}}</view>
+    </view>
+  </view>
+  <view class="cell">
+    <view class="title">位置</view>
+    <view class="main" bindtap="locationTap">
+        <view class="classname">{{location.address}}</view>
+    </view>
+  </view>
+  <view class="cell">
+    <view class="title">局长</view>
+    <view class="main">
+         <image class="userinfo-avatar" src="{{user.avatarUrl}}" background-size="cover"></image>
+         <view class="userinfo-name">{{user.nickName}}</view>
+    </view>
+  </view>
+  <view class="description-cell">
+    <view class="title">描述</view>
+    <view class="main" >{{description}}
+    </view>
+  </view>
+  <view class="cell">
+    <button type="primary" size="default" plain="default" bindtap="attendTap">参加活动</button>
+  </view>
+</view>
