--- a/pages/activity/list.wxss
+++ b/pages/activity/list.wxss
@@ -1,1 +1,15 @@
-/* pages/activity/list.wxss */
+
+.container {
+  font-size:16px; 
+  margin-top: 10px;
+}
+.container .cell {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space:nowrap;
+  border-top: 1px solid lightgray;
+  height: 50px;
+  width: 100%;
+  padding-top: 15px;
+  padding-left:15px;
+}
