--- a/pages/activity/show.wxss
+++ b/pages/activity/show.wxss
@@ -1,7 +1,7 @@
 /**index.wxss**/
 .container {
   font-size:16px; 
-  margin-top: -60px;
+  margin-top: 10px;
 }
 .container .cell {
   border-top: 1px solid lightgray;
@@ -9,7 +9,16 @@
   width: 100%;
   padding-top: 15px;
 }
-
+.container .inline {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space:nowrap;
+}
+.container .btn {
+  height: 40px;
+  width: 100%;
+  padding-top: 15px;
+}
 .container .description-cell {
   border-top: 1px solid lightgray;
   height: 80px;
