--- a/pages/activity/show.wxml
+++ b/pages/activity/show.wxml
@@ -41,10 +41,13 @@
     <view class="main" >{{description}}
     </view>
   </view>
-  <view class="btn" wx:if="{{!attended}}">
+  <view class="btn" wx:if="{{uncommitted}}">
     <button type="primary" size="default" plain="default" bindtap="attendTap">参加活动</button>
   </view>
   <view class="btn">
     <button type="primary" size="default" plain="default" open-type="share">分享活动</button>
+  </view>
+  <view class="btn">
+    <button type="primary" size="default" plain="default" open-type="contact">联系客服</button>
   </view>
 </view>
