--- a/pages/activity/participators.wxml
+++ b/pages/activity/participators.wxml
@@ -1,7 +1,7 @@
 
 <view class="container" wx:for="{{items}}">
   <view class="cell">
+  <image class="userinfo-avatar" src="{{item.avatarUrl}}" background-size="cover"></image>
     <view class="userinfo-name">{{item.nickName}}</view>
-    <view class="userinfo-avatar">{{item.avatarUrl}}</view>
   </view>
 </view>
